<resources>
    <string name="app_name">Bubble Tap</string>
    <string name="main_title">Bubble Tap</string>
    <string name="about_title">Bubble Tap</string>
    <string name="about_message">Get ready for some bubble-tapping fun! The game is easy to play, just tap the moving bubbles in the correct sequence as the game instructs. Progress through levels by tapping more and more bubbles in the right order. The faster you tap the bubbles, the higher score you get!\n</string>
    <string name="about_neutral">OK</string>
    <string name="mode_counting">Counting</string>
    <string name="mode_alpha">Alphabetical</string>
    <string name="mode_spell">Spelling</string>
    <string name="mode_multiples">Multiples</string>
    <string name="mode_revMult">Reverse Multiples</string>
    <string name="d_score">Score:\u0020</string>
    <string name="d_level">Level:\u0020</string>
    <string name="d_highest">Highest:\u0020</string>
    <string name="d_bonus">Bonus:\u0020</string>
    <string name="counting_tryAgain">You hit the wrong bubble!</string>
    <string name="alpha_tryAgain">You hit the wrong bubble! Hit \"%1$s\". </string>
    <string name="mult_nextLevel">Multiples of \"%1$d\".</string>
    <string name="mult_tryAgain">You tapped the wrong bubble! Tap the next multiple of \"%1$d\".</string>
    <string name="revMult_nextLevel">Tap the multiples of \"%1$d\" in reverse.</string>
    <string name="revMult_tryAgain">You tapped the wrong bubble! Tap \"%1$s\".</string>
    <string name="spell_nextLevel">Spell: \"%1$s\".</string>
    <string name="spell_tryAgain">You hit the wrong bubble! Hit \"%1$s\".</string>
    <string name="game_over">Game Finished!</string>
    <string name="play_again_msg">Congratulations! Would you like to play again?\n</string>
    <string name="high_score_msg">Congratulations! A new High Score!!! Would you like to play again?\n</string>
    <string name="player">PLAYER</string>
    <string name="score">SCORE</string>
    <string name="yes">YES!</string>
    <string name="no">No!</string>
    <string name="edit_hint">enter your name</string>
    <string name="unknown">UNKNOWN</string>
    <string name="lp_title">Move Speed</string>
    <string name="lp_desc">Indicates bubble movement speed</string>
    <string name="cb1_title">Toggle Sound Effects</string>
    <string name="cb1_off">Sound effects disabled</string>
    <string name="cb1_on">Sound effects enabled</string>
    <string name="cb2_title">Toggle Background Music</string>
    <string name="cb2_off">Music is off</string>
    <string name="cb2_on">Music is on</string>
    <string name="list1_title">Background Music</string>
    <string name="list1_desc">Pick a background music</string>
    <string name="list2_title">Game Mode</string>
    <string name="list2_desc">Choose your game mode</string>
</resources>
